# trafficmind

./: .env.example  .gitignore  ARCHITECTURE.md  CURRENT_STATE.md  IMPLEMENTATION_PLAN.md  README.md  ROADMAP.md  USAGE.md  alembic.ini  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260404_0001_database_foundation.py  20260404_0002_plate_read_ocr_metadata.py  20260404_0003_violation_rule_metadata.py  20260405_0004_watchlist_entries.py  20260405_0005_watchlist_alerts_and_plate_text_index.py  20260405_0006_evidence_manifests.py  20260405_0007_reid_tables.py  20260406_0008_alert_routing_foundation.py  20260406_0009_case_export.py  20260406_0010_model_registry_foundation.py  20260406_0011_extend_zone_type_enum.py  20260406_0012_delivery_retry_count.py  20260406_0013_junction_entity.py
apps/: README.md
apps/api/: .env.example  README.md
apps/web/: .env.example  README.md
apps/workflow/: .env.example  README.md
docs/: ARCHITECTURE.md  DATA_MODEL.md  DEPLOYMENT.md  INTEGRATIONS.md  LIMITATIONS.md  LOCAL_DEVELOPMENT.md  PRIVACY.md  PROVENANCE.md  README.md  SIGNAL_INTEGRATION.md  WORKER_PIPELINE.md  WORKFLOWS.md  anpr.md  camera-health.md  evaluation.md  evidence.md  notebooks.md
frontend/: README.md  package-lock.json  package.json
infra/: README.md
infra/docker/: README.md
infra/env/: README.md  dev.env.example  prod.env.example  staging.env.example
infra/scripts/: README.md  doctor.py  local_smoke.py  render_env.py  run_checks.py
services/: README.md
services/access_control/: __init__.py  policy.py
services/anpr/: README.md  __init__.py  search.py  watchlist.py
services/dwell/: README.md  __init__.py  analyzer.py  schemas.py
services/evaluation/: README.md  __init__.py  __main__.py  artifacts.py  metrics.py  schemas.py
services/events/: search.py
services/evidence/: README.md  __init__.py  privacy.py  schemas.py  service.py
services/flow/: README.md  __init__.py  analyzer.py  config.py  schemas.py
services/health/: README.md  __init__.py  assessor.py  schemas.py
services/hotspot/: README.md  __init__.py  adapters.py  aggregator.py  schemas.py
services/integrations/: README.md  __init__.py  adapters.py  builders.py  local.py  schemas.py  signals.py
services/model_registry/: __init__.py  runtime.py  schemas.py  service.py
services/motion/: README.md  __init__.py  analytics.py  calibration.py  estimator.py  schemas.py
services/ocr/: README.md  __init__.py  __main__.py  config.py  demo.py  interface.py  normalizer.py  persistence.py  pipeline.py  schemas.py
services/reid/: README.md  __init__.py  backends.py  config.py  interface.py  linking.py  schemas.py
services/rules/: README.md  __init__.py  __main__.py  config.py  engine.py  evaluators.py  persistence.py  schemas.py
services/runtime/: __init__.py  deployment.py
services/signals/: README.md  __init__.py  classifier.py  config.py  integration.py  schemas.py  state.py
services/streams/: README.md  __init__.py  __main__.py  config.py  events.py  frame_source.py  orchestrator.py  persist.py  pipeline.py  schemas.py  startup.py  worker.py  worker_pipeline.py
services/tracking/: README.md  __init__.py  __main__.py  config.py  demo.py  interface.py  schemas.py  utils.py
services/violations/: review.py  search.py
services/vision/: README.md  __init__.py  __main__.py  config.py  demo.py  interface.py  (+2 more)
tests/: README.md  __init__.py
(+194 files in other folders)
