[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trafficmind"
version = "0.1.0"
description = "Unified traffic computer-vision platform"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16,<2",
    "asyncpg>=0.30,<1",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "httpx>=0.28,<1",
    "python-dotenv>=1.0,<2",
    "numpy>=2.0,<3",
    "opencv-python>=4.10,<5",
    "supervision>=0.27,<1",
]

[project.optional-dependencies]
# GPU-accelerated computer-vision inference (requires CUDA on Linux; CPU-only fallback on Windows)
cv = [
    "ultralytics>=8.4,<9",
    "torch>=2.11",
    "torchvision>=0.26",
    "paddleocr>=3.4,<4",
    "paddlepaddle>=3.3,<4",
]
# Cold-path workflow service (LangGraph + LLM provider)
workflow = [
    "langgraph>=1.1,<2",
    "langchain-openai>=1.0,<2",
]
# Testing and development tooling
dev = [
    "pytest>=8.0,<10",
    "pytest-asyncio>=0.25,<2",
    "pytest-cov>=6.0,<8",
    "ruff>=0.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "services*", "packages*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring real model files or GPU (deselect with '-m \"not integration\"')",
    "smoke: golden-path operator smoke test — detection → tracking → OCR → rules",
]

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.coverage.run]
source = ["apps", "services"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
